<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.edu.uvg.besser.DesplegarUsuario$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bienvenidaUsuario"
        android:layout_below="@+id/bienvenidaUsuario"
        android:text="@string/bienvenidaAcla" />

    <TextView
        android:id="@+id/bienvenidaUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/bienvenida"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:text="@string/miercoles"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textViewDia1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:text="@string/lunes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewDia1"
        android:layout_alignBottom="@+id/textViewDia1"
        android:layout_marginRight="36dp"
        android:layout_toLeftOf="@+id/textView5"
        android:text="@string/martes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewDia1"
        android:layout_marginTop="16dp"
        android:text="@string/jueves"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/viernes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/sabado"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="50dp"
        android:text="@string/intruccionesTemas" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/domingo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/am"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/pm"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:onClick="enviarDatos"
        android:text="@string/botonTema" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView10"
        android:text="@string/uno"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toRightOf="@+id/textViewDia1"
        android:text="@string/dos"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignParentRight="true"
        android:text="@string/seis"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_toRightOf="@+id/textView11"
        android:text="@string/cinco"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignRight="@+id/textView9"
        android:text="@string/cuatro"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignLeft="@+id/textView9"
        android:text="@string/tres"
        android:textColor="@color/pressed_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="18dp"
        android:text="@string/siete"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/textViewDia1"
        android:text="@string/ocho"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/textView7"
        android:text="@string/nueve"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/diez"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView06"
        android:layout_alignBottom="@+id/TextView06"
        android:layout_alignRight="@+id/textView17"
        android:text="@string/doce"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_color" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_toRightOf="@+id/textView11"
        android:text="@string/once"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_color" />

</RelativeLayout>
