<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.edu.uvg.besser.MostrarProfesor$PlaceholderFragment" >

    <TextView
        android:id="@+id/resultadoEstu"
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:text="@string/carneEstudiante"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewDia1"
        android:layout_below="@+id/textViewDia1"
        android:layout_marginTop="15dp"
        android:text="@string/consultaEstudiantes" />

    <TextView
        android:id="@+id/textViewDia1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/bienvenidaProfesor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/editarEjercitaciones"
        android:onClick="editarEjercitacionesTema"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:text="@string/editarEjercicios"
        android:onClick= "editarEjerciciosSeleccionandoTema"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/resultadoEstu"
        android:layout_marginTop="24dp"
        android:text="@string/editarTemas"
        android:onClick="editarTemas"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/carneEstu"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/button3"
        android:ems="8"
        android:inputType="number" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/carneEstu"
        android:layout_alignBottom="@+id/carneEstu"
        android:layout_alignRight="@+id/button2"
        android:onClick="mostrarEstudiante"
        android:text="@string/consultarCarne"
        android:textSize="12sp" />

</RelativeLayout>
